# TPCS_2018

./: README.md
ConsoleApplication1/: ConsoleApplication1.sln
ConsoleApplication1/ConsoleApplication1/: ConsoleApplication1.vcxproj
vec1/: vec1.sln
vec1/vec1/: CMakeLists.txt  Resource.h  vec1.cpp  vec1.rc  vec1.vcxproj  vec1.vcxproj.filters  vec_sum.h
vec1_1/: vec1_1.sln
vec1_1/vec1_1/: CMakeLists.txt  Resource.h  vec1_1.cpp  vec1_1.rc  vec1_1.vcxproj  vec1_1.vcxproj.filters  vec_sum.h
vec2/: vec2.sln
vec2/vec2/: CMakeLists.txt  Resource.h  vec2.cpp  vec2.rc  vec2.vcxproj  vec2.vcxproj.filters  vec_dot.h
vec3/: vec3.sln
vec3/vec3/: CMakeLists.txt  Resource.h  vec3.cpp  vec3.rc  vec3.vcxproj  vec3.vcxproj.filters  vec_linspace.h
vec3_1/: vec3_1.sln
vec3_1/vec3_1/: CMakeLists.txt  Resource.h  vec3_1.cpp  vec3_1.rc  vec3_1.vcxproj  vec3_1.vcxproj.filters
vec4/: vec4.sln
vec4/vec4/: CMakeLists.txt  Resource.h  vec4.cpp  vec4.rc  vec4.vcxproj  vec4.vcxproj.filters  vec_integrate.h
vec5/: vec5.sln
vec5/vec5/: CMakeLists.txt  Resource.h  vec5.cpp  vec5.rc  vec5.vcxproj  vec5.vcxproj.filters  vec_bool.h  vec_dot.h  vec_integrate.h  vec_linspace.h
